<?xml version="1.0"?>
<package format="2">
  <name>basic_examples</name>

  <version>0.0.0</version>
  <description>This is the description.</description>
  <maintainer email="abc@xyz.com">ABC</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>
