<?xml version="1.0"?>
<package format="2">
  <name>diff_drive_kinematics</name>

  <version>0.0.0</version>
  <description>This is the description.</description>
  <maintainer email="abc@xyz.com">ABC</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
