<?xml version="1.0"?>
<package format="2">
  <name>real_slam_example</name>
  <version>1.2.1</version>
  <description>
    Description of package
  </description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
