<?xml version="1.0"?>
<package format="2">
  <name>sem_ekf_project</name>
  <version>0.0.0</version>
  <description>The sem_ekf_project package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>


  <export>
  </export>
</package>
