<?xml version="1.0"?>
<package format="2">
  <name>simple_image_processing</name>
  <version>1.2.1</version>
  <description>The simple_image_processing package</description>
  <maintainer email="micho@todo.todo">micho</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
